log
Wed 15 May 2024 07:04:43 PM UTC: 
 tests:  0|5
total_score: 0/70
bf75303
Wed 15 May 2024 07:11:02 PM UTC: 
 sudoku.c | 37 ++++++++++++++++++++++++++++++++++++-
 1 file changed, 36 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8dbfd7a
Wed 15 May 2024 07:12:18 PM UTC: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
0357ceb
Wed 15 May 2024 07:16:17 PM UTC: 
 sudoku.c | 46 ++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 44 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
b1e877d
Wed 15 May 2024 07:20:34 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
35bb785
Wed 15 May 2024 07:23:00 PM UTC: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|0
009ff8d
Wed 15 May 2024 07:33:48 PM UTC: 
 sudoku.c | 56 ++++----------------------------------------------------
 1 file changed, 4 insertions(+), 52 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:132:11: error: unused variable ‘S’ [-Werror=unused-variable]
  132 |    Stack* S=createStack();
      |           ^
sudoku.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
  134 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ad85b7c
Wed 15 May 2024 07:34:07 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
  133 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
31bd6c2
Wed 15 May 2024 07:34:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
ab4f493
Wed 15 May 2024 07:35:41 PM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
42e42c6
